<resources>
    <string name="app_name">Doctor Finder</string>
    <string name="name">Doctor Finder</string>
    <string name="speciality"> Speciality</string>
    <string name="location"> Location</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="copy">Dipak</string>
    <string name="player1">Dipak: 0</string>
    <string name="player2">Roshan: 0</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="admregister">Admin Register</string>
    <string name="game">Game</string>
    <string name="about">About</string>
    <string name="doctorfinder">Doctor FInder</string>
    <string name="info">An Android app</string>
    <string name="signin">Sign In</string>
    <string name="setting">Setting</string>
    <string name="logout">Log Out</string>
    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="viewDetails">View Details</string>
    <string name="specialist">Specialist</string>
    <string name="Name">Name</string>
    <string name="docLocation">Location</string>
    <string name="docPrice">Price</string>
    <string name="docAvailablity">Availability</string>
    <string name="btnInsert">Insert</string>
    <string name="share">Share</string>
    <string name="viewdetail">View Detail</string>
    <string name="an_android_app">An Android app</string>
    <string name="doctor_finder">Doctor Finder</string>
    <string name="docPhone">Phone</string>
    <string name="docHospital">Hospital</string>
    <string name="action_sign_in_short">Email</string>
    <string name="prompt_email">Email</string>
    <string name="sign">SIgn In</string>
    <string name="btnsignout">Sign Out</string>
    <string name="news">News</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="emergency">Emergency Phone Numbers</string>
    <string name="sendmail">Send Mail</string>
    <string name="sendmai">Send</string>
    <string name="Messege">Message</string>
    <string name="subject">Subject</string>
    <string name="to">To</string>
    <string name="docEmail">Email</string>
    <string name="inform">An Online Android App</string>
    <string name="searchhospital">Hospital Details</string>
    <string name="docSearch">Name in Small Letter</string>
    <string name="copyright_owner">Copyright@BURRD</string>
    <string name="copyright">This Doctor Finder App is Owned By:             Bhabana Pandey,Upendra Joshi,Renuka Katuwal,Roshan Pujara,Dipendra Pant              Copyright @ BURRD Group NAST(2018)</string>
    <string name="search_doctor">Search Doctors</string>
    <string name="inquery">Inquery</string>
    <string name="subscribe">Subscribe</string>
    <string name="search_profesional">Search Professional</string>
    <string name="docLoc">Location In Small Letter</string>
    <string name="docQual">Qualification</string>
    <string name="btnChoose">Choose</string>
    <string name="btnUpload">Upload</string>
    <string name="sign_i">Admin Login</string>

    <array name="speciality">
        <item>ENT</item>
        <item>Dermatologist</item>
        <item>Gynoclosist</item>
        <item>Pedratics</item>
        <item>Gerneral Medicine</item>
        <item>Neuro Surgeon</item>
        <item>Orthopedics</item>
        <item>Endocrinologist</item>
        <item>Neurologist</item>
        <item>Surgeon</item>
        <item>Cardiology</item>

    </array>
    <array name="location">
        <item>Dhangadhi</item>
        <item>Mahendranagar</item>
        <item>Kathmandu</item>
        <item>Pokhara</item>
    </array>


</resources>
