<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single"
    android:id="@+id/group1">

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        >
    </item>
    <item android:id="@+id/game_id"
        android:title="@string/game"
        android:icon="@drawable/signin"
        >
    </item>
    <item android:id="@+id/viewdetail"
        android:title="@string/viewdetail"
        android:icon="@drawable/detail"
        >
    </item>
    <item android:id="@+id/signin"
        android:title="@string/sign"
        android:icon="@drawable/ic_settings_black_24dp"
        >
    </item>


</group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:id="@+id/aboutus"
            android:title="@string/aboutus"
            android:icon="@drawable/aboutus"
            >
        </item>
        <item android:id="@+id/news"
            android:title="@string/news"
            android:icon="@drawable/contact"
           >
        </item>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item android:id="@+id/share"
            android:title="@string/share"
            android:icon="@drawable/share"
            >
        </item>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group4">
    <item android:id="@+id/adminregister"
            android:title="@string/admregister"
        android:icon="@drawable/logout"
        >
    </item>
    </group>




</menu>