<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:layout_weight="1"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edittext_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/docLocation"
        android:layout_weight="1"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edittext_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/docPrice"
        android:layout_weight="1"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edittext_aviablity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/docAvailablity"
        android:layout_weight="1"
        android:inputType="text"/>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnInsert"
        android:layout_weight="1"/>


</LinearLayout>