<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#71783c">

    <ImageView
        android:id="@+id/image_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:padding="@dimen/dp_10"
        android:background="#fff"
        android:onClick="closekeyboard"
        />

    <LinearLayout
        android:id="@+id/ll_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_id"
        android:layout_margin="@dimen/dp_20"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:padding="@dimen/dp_10"
        android:onClick="closekeyboard">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:textSize="@dimen/dp_30"
            />

        <AutoCompleteTextView
            android:id="@+id/et_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/speciality"
            android:background="#d7d7d7"
            android:padding="@dimen/dp_10"/>

        <AutoCompleteTextView
            android:id="@+id/et_loca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:padding="@dimen/dp_10"
            android:background="#d7d7d7"
            android:layout_marginTop="@dimen/dp_10"/>

        <Button
            android:id="@+id/btn_srch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:textSize="@dimen/dp_20"/>

        <Button
            android:id="@+id/btn_clr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/clear"
            android:textSize="@dimen/dp_20"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/copy"
        android:textAlignment="center"
        android:textSize="@dimen/dp_20"/>

</RelativeLayout>